client/src/index.css
body {
	background: #f2f2f2;
	margin-top: 152px;
}

.container {
	max-width: 1024px;
}

h5 {
	text-decoration: underline;
}

.breadcrumb {
	background: #f9f9f9;
}

button {
	z-index:2;
}

input[type=checkbox][readonly] {
	cursor: not-allowed;
}

fieldset {
	background: #fff;
	border: 1px solid #e0e0e0;
	padding: 1.25em;
	margin: 0;
	margin-bottom: 3rem;
	width: 100%;
}

.legend {
	float: left;
	width: 100%;
	color: #363636;
	border: none;
	font-weight: normal;
}

h2.legend {
	font-size: 2rem;
}

.legend small {
	float: right;
	font-size: 1.2rem;
	margin: 1rem 0.5rem 0 0;
}

.legend small .btn {
	margin-top: -2rem;
}

.legend small .btn + .btn {
	margin-left: 1rem;
}

fieldset .pagination {
	margin: 0;
}

fieldset .negative-bottom {
	margin-bottom: -20px;
}

fieldset .help-text {
	margin: 0 0 2rem 5rem;
}

fieldset.collapsable {
	background: none;
	border: none;
}
fieldset.collapsable legend hr {
	border: 1px solid #e0e0e0;
	margin-top: 10px;
}
fieldset.collapsable legend div.collapsableToggle {
	margin-right: 5px;
}

.input-group {
	width: 100%;
}

.form-control-icon {
	position: absolute;
	top: 4px;
	right: 2rem;
	height: 26px;
	z-index: 2;
	opacity: 0.5;
}

.input-group .form-control-icon {
	right: 5rem;
}

.react-autosuggest__suggestions-list {
	max-height: 231px;
	overflow-y: scroll;
}

.shortcut-list {
	padding: 0;
	margin-top: -4px;
}

.shortcut-list .btn-link {
	text-align: left;
	white-space: initial;
	padding: 0;
}

.btn.btn-link {
	overflow: visible;
	width: 100%;
}

.btn-group .radio-inline, .btn-group-vertical .radio-inline {
	padding: 0;
	margin: 0;
}

.btn-group .radio-inline input, .btn-group-vertical .radio-inline input {
	display: none;
}

.header .logo img, .header input, .header button {
	height: 38px;
}

.header button {
	font-weight: bold;
}

.header .row > div * {
	margin: 0;
}

.nprogress-custom-parent .bar {
	top: 130px !important;
}

.nprogress-custom-parent .peg {
	transform: rotate(-3deg) translate(0px, 4px) !important;
}

.nprogress-custom-parent .spinner {
	top: 104px !important;
	right: 8px !important;
}

.graphiql-container {
	min-height: 600px;
}

.todo {
	background-color: red;
}

.home-tile-row {
	padding: 0;
}

.home-tile-row .row {
	display: table;
}

.home-tile-row span.close-getting-started {
	position: relative;
	top: -10px;
	right: 5px;
	font-size: 1.2rem;
	float: right;
	cursor: pointer;
	opacity: .2;
	color: #000;
	text-shadow: 0 1px 0 #fff;
	font-weight: bold;
}

.home-tile-row span.close-getting-started:hover {
	opacity: .5;
	text-decoration: none;
}

a.home-tile {
	display: table-cell;
	float: none;
	vertical-align: top;
	text-align: center;
	padding-top: 20px;
	padding-bottom: 20px;
	color: #5c5c5c;
	text-decoration: none;
}
.home-tile h1 {
	font-weight: 900;
}

.home-tile:hover {
	background: #dae3ee;
}

.person-icon {
	margin-right: 4px;
}

.primary-attendee .checkbox {
	padding: 0;
	margin: 0;
	text-align: center;
}

.loading .anet section {
	visibility: hidden;
}

.loading .anet section:before {
	content: "Loading...";
	visibility: visible;
	font-size: 2rem;
}

.nav img {
	width: 16px;
	margin-right: 6px;
}

.nav .nav > li {
	border-left: 4px solid rgba(0,0,0,0);
}

.nav .nav > li a {
	padding: 4px 0 4px 38px;
}

.nav .nav > li.active  {
	border-left:4px solid #1772B8;
}

@media (min-width: 768px) {
	.nav-fixed {
		position: fixed;
		width: 158px;
	}
}

@media (min-width: 992px) {
	.nav-fixed {
		width: 212px;
	}
}

.form-bottom-submit {
	text-align: center;
	margin: 5rem 0 40px 0;
}

.form-bottom-submit .btn {
	font-size: 2.3rem;
	width: 35%;
}

.report-sub-form .form-group {
	margin: 24px;
}

.report-sub-form textarea {
	width: 100%;
}

.report-sub-form .right-button {
	float: right;
	margin-right: 24px;
}

.report-sub-form button {
	margin-left: 24px;
}

.report-collection header {
	margin-bottom: 18px;
}

.report-summary {
	margin-top: 18px;
	padding-top: 18px;
	border-top: 1px solid #ccc;
}

.report-summary .row {
	margin-top: 3px;
}

.report-summary .read-full {
	float: right;
}

.report-summary .engagement-date {
	margin-right: 10px;
	padding-left: 10px;
	padding-right: 10px;
}

.report-summary .people-separator {
	margin-left: 5px;
	color: #999999;
	font-size: 1.1rem;
}

.not-found {
	height: 100%;
}

.not-found body {
	background-image: url(resources/mountains.png);
	background-repeat: no-repeat;
	background-position: center bottom;
	background-size: contain;
}

.not-found .not-found-text {
	text-align: center;
}

.not-found .planet {
	width: 250px;
	position: absolute;
	right: 0;
	top: -90px;
}

.onboarding-new {
	width: 40%;
	margin-left: auto;
	margin-right: auto;
}

.onboarding-new h1, .onboarding-new p, .onboarding-new button {
	text-align: center;
}

.onboarding-new h1 {
	font-size: 24px;
	font-weight: bold;
	margin-bottom: 36px;
}

.onboarding-new p {
	font-size: 16px;
	margin-bottom: 24px;
}

.onboarding-new .help {
	margin-top: 36px;
}

.onboarding-new .help p {
	font-size: 12px;
	color: #999;
	margin-bottom: 0px;
}

.onboarding-new .create-account-button-wrapper {
	text-align: center;
}

.onboarding-new .role {
	text-transform: uppercase;
}

.getting-started-grid {
	padding-left: 0;
	padding-right: 0;
}

.getting-started-grid .row  {
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.getting-started-grid .row:first-child {
	margin-bottom: 20px;
}

.getting-started-grid .row:last-child {
	margin-top: 20px;
}

.getting-started-grid .row h3,button {
	margin-top: 0;
	margin-bottom: 0;
}

.getting-started-grid .row h3 {
	font-size: 16px;
}

.getting-started-grid .row button {
	font-size: 12px;
}

.getting-started-grid {
	padding-top: 15px;
	padding-bottom: 15px;
}

.getting-started-grid a {
	font-weight: bold;
}

.getting-started-grid p {
	margin-bottom: 0;
}

.middle-header {
	text-align: center;
}

table.borderless td {
	border: none !important;
}

table hr.attendee-divider {
	margin: 0px;
}

.report-cancelled {
	border-left: 1.5rem solid #DA9795;
	padding-left: 1rem;
}

.report-form fieldset:last-child {
	margin-bottom: 10px;
}

.report-form .submit-buttons {
	display: flex;
	align-items: flex-end;
	margin-bottom: 5px;
}
.report-form .submit-buttons > div:first-child {
	flex-grow: 2;
}
.report-form .submit-buttons > div:last-child {
	margin-left: 10px;
}
.report-form .submit-buttons h2 {
	margin-bottom: 0px;
}

.report-form .button-row {
	/* This matches the form fieldset's margin-bottom. */
	margin-bottom: 7rem;
}

.report-form .button-row button:nth-last-child(-n+2) {
	float: right;
}

.report-form .button-row .preview-and-submit {
	margin-right: 2px;
}

.report-form .button-row .save-for-later {
	margin-right: 30px;
	background-color: #8ca6c7;
	border-color: #8ca6c7;
}

.report-form .button-row .cancel {
	width: 15%;
}

.report-form .top-submit-buttons .button-row {
	margin-bottom: 10px;
}

.show-report-overview label.col-sm-2 {
	/* This clobbers the grid system but w/e. */
	width: 130px;
}

.show-report-overview .form-group {
	/* The design calls for 18px of separation between the form rows.
		The form row already has padding-top: 7px and padding-bottom: 7px,
		and 7+7 = 14, so we need 4 more px here to make it 18 in total.
	*/
	margin-bottom: 4px;
}

